# cert-speedrun-optimizer

./: .gitignore  .mcp.json  Containerfile  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml  server.py
.github/workflows/: docker-publish.yml
docker/: Caddyfile  entrypoint.sh  seed_data.py  supervisord.conf
src/cert_speedrun/: __init__.py  answer_validation.py  models.py  server.py
src/cert_speedrun/db/: __init__.py  database.py  repository.py  schema.sql
src/cert_speedrun/web/: __init__.py  app.py  routes.py
src/cert_speedrun/web/templates/: base.html  exam.html  index.html  practice.html  results.html  stats.html
src/cert_speedrun/web/templates/components/: answer_feedback.html  question.html  session_complete.html
tests/: __init__.py  test_answer_validation.py
